adds SEO meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sahan.tech</title>
+    <meta name="description" content="Explore my projects, technical expertise, and work experience. Always ready to take on new challenges!">
+    <title>Sahan Ratnayake | Web Developer | Problem Solver</title>
+    <meta name="robots" content="index,follow">
+
+    <meta property="og:title" content="Sahan Ratnayake | Web Developer | Problem Solver">
+    <meta property="og:description" content="Explore my projects, technical expertise, and work experience. Always ready to take on new challenges!">
+    <meta property="og:url" content="https://www.sahan.tech">
+    <meta property="og:image" content="https://www.sahan.tech/profile.webp">
   </head>
   <body>
     <div id="root"></div>
