updates resume content changes font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:description" content="Explore my projects, technical expertise, and work experience. Always ready to take on new challenges!">
     <meta property="og:url" content="https://www.sahan.tech">
     <meta property="og:image" content="https://www.sahan.tech/profile.webp">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
