fixes font issues project card show on tab fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://www.sahan.tech">
     <meta property="og:image" content="https://www.sahan.tech/profile.webp">
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
