adds ga4 tracking

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel=”canonical” href=”https://www.sahan.tech” />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore my projects, technical expertise, and work experience. Always ready to take on new challenges!">
+    <meta name="description" content="Full-Stack Web Developer based in Hamilton, Ontario. Explore my projects, technical expertise, and work experience. Always ready to take on new challenges!">
     <title>Sahan Ratnayake | Web Developer | Problem Solver</title>
     <meta name="robots" content="index,follow">
 
